--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -6,3 +6,6 @@ tenant_id = "00000000-0000-0000-0000-000000000000"
 
 client_id = "00000000-0000-0000-0000-000000000000"
 client_secret = "00000000-0000-0000-0000-000000000000"
+
+ssh_public_key = "SSH公開鍵の中身"
+allowed_ip_addresses = ["接続を許可するIPアドレスA", "接続を許可するIPアドレスB", "接続を許可するIPアドレスC"]
